Fixed content overflow
Removed browser scroller using CSS
Fixed PIXI version to 6.3.2

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,13 +3,7 @@ body {
 	font-family: "Century Gothic", helvetica, arial, sans-serif;
 	font-size: 1.4em;
 	line-height: 1.5;
-}
-
-.fps {
-	position: fixed;
-	left: 0px;
-	bottom: 0px;
-	color: #0000ff;
-	z-index: 10;
-	font-family: monospace;
+	margin:0;
+	padding:0;
+	overflow: hidden;
 }
